fix: handle auto gen swagger ui
