# server/src/routers/user.routes.js
@@ -11,54 +11,6 @@ const {
   updateUserSchema,
 } = require("@/validators/user.validator");
 
-router.post(
-  "/register",
-  // #swagger.tags = ['User']
-  // #swagger.description = 'Register a new user'
-  /* #swagger.requestBody = {
-    required: true,
-    content: {
-      "application/json": {
-        schema: { $ref: "#/components/schemas/RegisterRequest" }
-      }
-    }
-  } */
-  /* #swagger.responses[201] = {
-    description: "User registered successfully",
-    content: {
-      "application/json": {
-        schema: { $ref: "#/components/schemas/AuthResponse" }
-      }
-    }
-  } */
-  validate(registerSchema),
-  asyncHandler(userController.register.bind(userController))
-);
-
-router.post(
-  "/login",
-  // #swagger.tags = ['User']
-  // #swagger.description = 'User login'
-  /* #swagger.requestBody = {
-    required: true,
-    content: {
-      "application/json": {
-        schema: { $ref: "#/components/schemas/LoginRequest" }
-      }
-    }
-  } */
-  /* #swagger.responses[200] = {
-    description: "Login successful",
-    content: {
-      "application/json": {
-        schema: { $ref: "#/components/schemas/AuthResponse" }
-      }
-    }
-  } */
-  validate(loginSchema),
-  asyncHandler(userController.login.bind(userController))
-);
-
 router.get(
   "/me",
   // #swagger.tags = ['User']
